# LearningHaskell

./: README.md
FileParser/: cabal.sandbox.config  config.txt  monkeys.cabal
FileParser/src/: main.hs
ScottyWeb/: Main.hs  ScottyWeb.cabal  readme.md
ScottyWeb/Datas/: 2015-01-20-test.markdown  2015-01-21.markdown
