name:          readConfigFile
version:       0.1.0.0
build-type:    Simple
cabal-version: >= 1.18


executable readConfigFile
  main-is:              Main.hs
  build-depends:        base
                      , text
                      , bytestring
                      , parsec
  hs-source-dirs:       src
  default-language:     Haskell2010